default/objects/Karta_CCS_Bonus_Fleet__c/Karta_CCS_Bonus_Fleet__c.object-meta.xml
<CustomObject>
    <description>CCS Bonus Fleet Card - connection to Merlin.</description>
    <label>Karta CCS Bonus Fleet</label>
    <nameField>
        <label>Karty CCS Bonus Fleet</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Karty CCS Bonus Fleet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>