default/objects/Karta_CCS_Bonus_Fleet__c/fields/CCS_Order__c.field-meta.xml
<CustomField>
    <fullName>CCS_Order__c</fullName>
    <label>CCS Order</label>
    <referenceTo>CCS_Order__c</referenceTo>
    <relationshipLabel>Karty CCS Bonus Fleet</relationshipLabel>
    <relationshipName>Karty_CCS_Bonus_Fleet</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>