default/objects/Karta_CCS_Bonus_Fleet__c/fields/Denni_limit_v_Kc__c.field-meta.xml
<CustomField>
    <fullName>Denni_limit_v_Kc__c</fullName>
    <label>Denní Limit v Kč</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>