default/objects/Karta_CCS_Bonus_Fleet__c/fields/Objednavka_CCS_Bonus_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Objednavka_CCS_Bonus_Fleet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objednávka CCS Bonus Fleet</label>
    <referenceTo>CCS_Bonus__c</referenceTo>
    <relationshipLabel>Karty CCS Bonus Fleet</relationshipLabel>
    <relationshipName>Karty_CCS_Bonus_Fleet</relationshipName>
    <type>Lookup</type>
</CustomField>