default/objects/Karta_CCS_Bonus_Fleet__c/fields/Povolene_kody_zbozi__c.field-meta.xml
<CustomField>
    <fullName>Povolene_kody_zbozi__c</fullName>
    <label>Povolené kódy zboží</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>