default/objects/Karta_CCS_Bonus_Fleet__c/fields/Povolene_skupiny_zbozi__c.field-meta.xml
<CustomField>
    <fullName>Povolene_skupiny_zbozi__c</fullName>
    <label>Povolené skupiny zboží</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Skupina 00</fullName>
            </value>
            <value>
                <fullName>Skupina 01</fullName>
            </value>
            <value>
                <fullName>Skupina 02</fullName>
            </value>
            <value>
                <fullName>Skupina 03</fullName>
            </value>
            <value>
                <fullName>Skupina 04</fullName>
            </value>
            <value>
                <fullName>Skupina 06</fullName>
            </value>
            <value>
                <fullName>Povolené kódy zboží</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>