default/objects/Karta_CCS_Bonus_Fleet__c/fields/RZ_vozidla_nebo_jmeno_ridice__c.field-meta.xml
<CustomField>
    <fullName>RZ_vozidla_nebo_jmeno_ridice__c</fullName>
    <label>RZ vozidla nebo jméno řidiče</label>
    <length>30</length>
    <type>Text</type>
</CustomField>