default/objects/Karta_CCS_Bonus_Fleet__c/fields/Tydenni_limit_v_Kc__c.field-meta.xml
<CustomField>
    <fullName>Tydenni_limit_v_Kc__c</fullName>
    <label>Týdenní limit v Kč</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>